@@ -1,0 +1,7 @@
+Ext.menu.RangeMenu.prototype.icons = {
+  gt: '/extjs/examples/grid-filtering/img/greater_then.png', 
+  lt: '/extjs/examples/grid-filtering/img/less_then.png',
+  eq: '/extjs/examples/grid-filtering/img/equals.png'
+};
+
+Ext.grid.filter.StringFilter.prototype.icon = '/extjs/examples/grid-filtering/img/find.png';
